# LCX

./: .clang-format  .gitignore  CMakeLists.txt  LCX.qrc
d3party/ElaWidgetTools/ElaWidgetTools/: ElaProperty.h
d3party/ElaWidgetTools/lib/: ElaWidgetTools.lib
d3party/QCloudMusicApi/QCloudMusicApi/: CMakeLists.txt  api_c.cpp  api_c.h  apihelper.cpp  apihelper.h  definevaluehelper.h  module.cpp  module.h  plugins.cpp  plugins.h  qcloudmusicapiglobal.h  qcloudmusicapiplugin.h
d3party/QCloudMusicApi/QCloudMusicApi/example/C#/: Program.cs
d3party/QCloudMusicApi/QCloudMusicApi/example/Python/: api.py  main.py
d3party/QCloudMusicApi/QCloudMusicApi/example/Rust/: Cargo.toml
d3party/QCloudMusicApi/QCloudMusicApi/example/Rust/src/: main.rs
d3party/QCloudMusicApi/QCloudMusicApi/util/: crypto.cpp  crypto.h  index.h  option.cpp  option.h  request.cpp  request.h
d3party/QCloudMusicApi/lib/: QCloudMusicApi.lib
d3party/QQMusicApi/: qqmusic_bridge.py
d3party/QQMusicApi/qqmusic_api/: __init__.py
d3party/QQMusicApi/qqmusic_api/algorithms/: __init__.py  tripledes.py
d3party/QQMusicApi/qqmusic_api/core/: __init__.py  client.py  exceptions.py  pagination.py  request.py  versioning.py
d3party/QQMusicApi/qqmusic_api/models/: base.py  login.py  mv.py  request.py  singer.py  top.py  user.py
d3party/QQMusicApi/qqmusic_api/modules/: _base.py  album.py  comment.py  login.py  login_utils.py  lyric.py  mv.py  recommend.py  search.py  singer.py  song.py  songlist.py  top.py
d3party/QQMusicApi/qqmusic_api/utils/: common.py  device.py  mqtt.py  qimei.py
d3party/python-3.12.2/: python312._pth
src/: CMakeLists.txt  export_wait_dialog.cpp  export_wait_dialog.h  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  music_window.cpp  music_window.h
src/core/: CMakeLists.txt  base_music.cpp  base_music.h  cloud_music.cpp  cloud_music.h  downloader.cpp  downloader.h  qq_music.cpp  qq_music.h
src/io/: CMakeLists.txt  export_wait_dialog.cpp  export_wait_dialog.h  word_engine.cpp  word_engine.h  word_export.cpp  word_export.h
src/resource/: app.rc
